name:                pandoc-snowflake
version:             0.1.0.0
synopsis:            A pandoc filter to support the Snowflake writing method
description:         Creates part of an HTML app
license:             BSD3
license-file:        LICENSE
author:              Lars Krueger
maintainer:          lars_e_krueger@gmx.de
copyright:           (c) 2017 Lars Krueger
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository this
  type: git
  location: https://github.com/LarsEKrueger/pandoc-snowflake.git
  tag: v_0.1.1.0

executable pandoc-snowflake
  main-is:             Main.hs
  other-modules:       Snowflake.Content,
                       Snowflake.Database,
                       Snowflake.Menu,
                       Snowflake.Tab.Overview,
                       Snowflake.Tab.Synopsis,
                       Snowflake.Tab.Details,
                       Snowflake.Tab.Scenes,
                       Snowflake.Tab.FourPage
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10,
                       pandoc-types >= 1.16 && < 1.18,
                       bytestring == 0.10.*,
                       aeson == 1.0.*,
                       pandoc == 1.19.*,
                       containers == 0.5.*,
                       pretty-show == 1.6.*
  hs-source-dirs:      src
  default-language:    Haskell2010
