name:                pandoc-snowflake
version:             0.3.0.1
synopsis:            A pandoc filter to support the Snowflake writing method
description:         Creates part of an HTML app
license:             GPL-2
license-file:        LICENSE
author:              Lars Krueger
maintainer:          lars_e_krueger@gmx.de
copyright:           (c) 2019 Lars Krueger
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

data-files:
  skeleton/book.mdwiki,
  skeleton/design.mdwiki,
  skeleton/details.mdwiki,
  skeleton/include/book_header.html,
  skeleton/include/design_header.html,
  skeleton/include/epub.css,
  skeleton/Makefile,
  skeleton/overview.mdwiki
  skeleton/synopsis.mdwiki
  skeleton/title.mdwiki


source-repository this
  type: git
  location: https://github.com/LarsEKrueger/pandoc-snowflake.git
  tag: v_0.3.0.1

executable pandoc-snowflake
  main-is:             Main.hs
  other-modules:       Snowflake.Content,
                       Snowflake.Database,
                       Snowflake.Menu,
                       Snowflake.Tab.Overview,
                       Snowflake.Tab.Synopsis,
                       Snowflake.Tab.Details,
                       Snowflake.Tab.Scenes,
                       Snowflake.Tab.FourPage,
                       Paths_pandoc_snowflake
  -- other-extensions:    
  build-depends:       base >=4.9 && <5,
                       mtl >= 2.2,
                       pandoc-types == 1.22.*,
                       pandoc >= 2.11,
                       bytestring == 0.10.*,
                       aeson == 1.5.*,
                       containers >= 0.5,
                       text >= 1.2,
                       pretty-show >= 1.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable psf-init
  main-is:             Main.hs
  other-modules:       Paths_pandoc_snowflake
  build-depends:       base >=4.9 && <5,
                       haskeline >= 0.7,
                       directory >= 1.3,
                       filepath >= 1.4,
                       text >= 1.2,
                       filemanip >= 0.3
  hs-source-dirs:      src/psf-init
  default-language:    Haskell2010

